--- a/ci-base/Makefile
+++ b/ci-base/Makefile
@@ -37,7 +37,7 @@ last_built_date: ## Show last build date
 	podman inspect -f '{{ .Created }}' $(NAME):$(VERSION)
 
 .PHONY: release
-release: check_release_version build tag_latest push tag_github ## Combine steps to make release
+release: check_release_version build tag_latest push  ## Combine steps to make release
 
 .PHONY: check_release_version
 check_release_version:
